--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -3,6 +3,25 @@
 
 /* Header */
 /* ---------------------------- */
+header {
+	.navbar-menu {
+		.navbar-end {
+			a.navbar-item {
+				svg {
+					margin-right: .5rem;
+				}
+			}
+
+			.buttons {
+				.button {
+					svg {
+						margin-right: .5rem;
+					}
+				}
+			}
+		}
+	}
+}
 
 /* Footer */
 /* ---------------------------- */
@@ -12,12 +31,21 @@
 
 /* About */
 /* ---------------------------- */
+#about {
+
+}
 
 /* Skills */
 /* ---------------------------- */
+#skills {
+
+}
 
 /* Experience */
 /* ---------------------------- */
+#experience {
+
+}
 
 /* Miscellaneous */
 /* ---------------------------- */
