Edit fonts, variables

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,30 +8,34 @@
 
 /* Imports */
 /* ---------------------------- */
-@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200;400&family=Oxygen:wght@400;700&family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Montserrat:wght@400;700&family=Roboto+Slab:wght@300&display=swap');
 
 /* Tailwind */
 @import 'tailwind';
 
 /* Custom */
 @import 'typography';
+@import 'hero';
 
 :root {
 	--font-display: theme('fontFamily.display');
 	--font-sans: theme('fontFamily.sans');
 	--font-serif: theme('fontFamily.serif');
-	--color-dark-brown: theme('colors.dark-brown');
-	--color-medium-brown: theme('colors.medium-brown');
-	--color-light-brown: theme('colors.light-brown');
-	--color-black: theme('colors.black');
-	--color-dark-purple: theme('colors.dark-purple');
-	--color-bright-purple: theme('colors.bright-purple');
-	--color-light-purple: theme('colors.light-purple');
-	--color-dark-blue: theme('colors.dark-blue');
-	--color-bright-blue: theme('colors.bright-blue');
-	--color-cyan: theme('colors.cyan');
-	--color-dark-green: theme('colors.dark-green');
-	--color-off-white: theme('colors.off-white');
-	--color-white: '#eeeeee';
-	--color-grey: theme('colors.grey');
+	--color-dark-purple   : theme('colors.dark-purple');
+	--color-medium-purple : theme('colors.medium-purple');
+	--color-light-purple  : theme('colors.light-purple');
+	--color-dark-blue     : theme('colors.dark-blue');
+	--color-medium-blue   : theme('colors.medium-blue');
+	--color-light-blue    : theme('colors.light-blue');
+	--color-cyan          : theme('colors.cyan');
+	--color-dark-green    : theme('colors.dark-green');
+	--color-yellow        : theme('colors.yellow');
+	--color-pink          : theme('colors.pink');
+	--color-white         : theme('colors.white');
+	--color-grey          : theme('colors.grey');
+	--color-black         : theme('colors.black');
+}
+
+html {
+	background: var(--color-black);
 }
