--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -4,7 +4,7 @@ p {margin-bottom: 1rem;}
 
 h1, h2, h3, h4, h5 {
 	margin: 3rem 0 1.38rem;
-	font-family: var(--display);
+	font-family: var(--font-serif);
 	font-weight: 400;
 	line-height: 1.3;
 }
