--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -1,8 +1,29 @@
 html {font-size: 100%;} /*16px*/
 
-p {margin-bottom: 1rem;}
+p,
+ul,
+ol {
+	color: var(--color-black);
+	font-family: var(--font-sans);
+}
+
+blockquote {
+	color: var(--color-grey);
+	font-family: var(--font-serif);
+}
+
+a {
+	color: var(--color-bronze);
+	font-family: var(--font-serif);
+	text-decoration: underline;
+}
+
+p {
+	margin-bottom: 1rem;
+}
 
 h1, h2, h3, h4, h5 {
+	color: var(--color-teal);
 	margin: 3rem 0 1.38rem;
 	font-family: var(--font-serif);
 	font-weight: 400;
@@ -14,12 +35,22 @@ h1 {
 	font-size: 3.052rem;
 }
 
-h2 {font-size: 2.441rem;}
+h2 {
+	font-size: 2.441rem;
+}
 
-h3 {font-size: 1.953rem;}
+h3 {
+	font-size: 1.953rem;
+}
 
-h4 {font-size: 1.563rem;}
+h4 {
+	font-size: 1.563rem;
+}
 
-h5 {font-size: 1.25rem;}
+h5 {
+	font-size: 1.25rem;
+}
 
-small, .text_small {font-size: 0.8rem;}
+small, .text_small {
+	font-size: 0.8rem;
+}
