--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -3,54 +3,73 @@ html {font-size: 100%;} /*16px*/
 p,
 ul,
 ol {
-	color: var(--color-black);
-	font-family: var(--font-sans);
+    color: var(--color-black);
+    font-family: var(--font-sans);
 }
 
 blockquote {
-	color: var(--color-grey);
-	font-family: var(--font-serif);
+    color: var(--color-grey);
+    font-family: var(--font-serif);
 }
 
 a {
-	color: var(--color-bronze);
-	font-family: var(--font-serif);
-	text-decoration: underline;
+    color: var(--color-bronze);
+    font-family: var(--font-serif);
+    text-decoration: underline;
 }
 
 p {
-	margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 h1, h2, h3, h4, h5 {
-	color: var(--color-teal);
-	margin: 3rem 0 1.38rem;
-	font-family: var(--font-serif);
-	font-weight: 400;
-	line-height: 1.3;
+    color: var(--color-teal);
+    margin: 3rem 0 1.38rem;
+    font-family: var(--font-serif);
+    font-weight: 400;
+    line-height: 1.3;
 }
 
 h1 {
-	margin-top: 0;
-	font-size: 3.052rem;
+    font-family: var(--font-display);
+    font-size: 3.052rem;
+    margin-top: 0;
 }
 
 h2 {
-	font-size: 2.441rem;
+    font-family: var(--font-display);
+    font-size: 2.441rem;
 }
 
 h3 {
-	font-size: 1.953rem;
+    font-size: 1.953rem;
 }
 
 h4 {
-	font-size: 1.563rem;
+    font-size: 1.563rem;
 }
 
 h5 {
-	font-size: 1.25rem;
+    font-size: 1.25rem;
 }
 
 small, .text_small {
-	font-size: 0.8rem;
+    font-size: 0.8rem;
+}
+
+ul {
+    li {
+        font-size: 1rem;
+        line-height: 2;
+
+        &:before {
+            background: var(--color-teal);
+            border-radius: .75rem;
+            content: '';
+            display: inline-block;
+            height: .75rem;
+            margin-right: .75rem;
+            width: .75rem;
+        }
+    }
 }
