--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -13,7 +13,7 @@ blockquote {
 }
 
 a {
-    color: var(--color-bronze);
+    color: var(--color-grey);
     font-family: var(--font-serif);
     text-decoration: underline;
 }
@@ -24,7 +24,7 @@ p {
 
 h1, h2, h3, h4, h5 {
     color: var(--color-teal);
-    margin: 3rem 0 1.38rem;
+    margin: 0;
     font-family: var(--font-serif);
     font-weight: 400;
     line-height: 1.3;
@@ -43,6 +43,7 @@ h2 {
 
 h3 {
     font-size: 1.953rem;
+    padding-bottom: 1.953rem;
 }
 
 h4 {
@@ -61,6 +62,7 @@ ul {
     li {
         font-size: 1rem;
         line-height: 2;
+        padding-bottom: .5rem;
 
         &:before {
             background: var(--color-teal);
